[gd_scene load_steps=3 format=3 uid="uid://cabybg7d5xuqk"]

[ext_resource type="Script" uid="uid://dcf4rmjan5gul" path="res://scene/chat_window.gd" id="1_qgdas"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11pts"]
bg_color = Color(1.2875572, 1.2875572, 1.2875572, 1)

[node name="ChatWindow" type="Control"]
custom_minimum_size = Vector2(600, 900)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgdas")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_11pts")

[node name="MessagesScroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 820.0
grow_horizontal = 2

[node name="MessagesContainer" type="VBoxContainer" parent="MessagesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputArea" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="InputField" type="LineEdit" parent="InputArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="InputArea"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "发送"

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 570.0
offset_right = 600.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0.972549, 0, 0, 1)
text = "X"
