extends Control

@onready var messages_container: VBoxContainer = $MessagesScroll/MessagesContainer
@onready var input_field: LineEdit = $InputArea/InputField
@onready var send_button: Button = $InputArea/SendButton
@onready var close_button: Button = $CloseButton

signal window_closed

var chat_history: Array[Dictionary] = []
const MAX_HISTORY: int = 50

func _ready() -> void:
	print("âœ… ChatWindow UI åˆå§‹åŒ–")
	
	# âœ… ä¿®å¤ä¿¡å·è¿žæŽ¥ï¼ˆå…³é”®ä¿®å¤ï¼‰
	if XxClient.message_received.is_connected(_on_mai_response):
		XxClient.message_received.disconnect(_on_mai_response)
		print("ðŸ”„ å·²æ–­å¼€æ—§ä¿¡å·è¿žæŽ¥")
	
	XxClient.message_received.connect(_on_mai_response)
	XxClient.connection_changed.connect(_on_connection_changed)
	send_button.pressed.connect(_on_send_pressed)
	input_field.text_submitted.connect(_on_send_pressed)
	close_button.pressed.connect(_on_close_pressed)
	
	print("  ðŸ“ messages_container:", messages_container)
	print("  ðŸ“ input_field:", input_field)
	
	load_chat_history()
	
	if chat_history.is_empty():
		add_message("ä½ å¥½ï¼æˆ‘æ˜¯xxï¼Œæ¥èŠå¤©å§ï½ž", false)

func _on_connection_changed(status: int) -> void:
	"""è¿žæŽ¥çŠ¶æ€å˜åŒ–"""
	match status:
		XxClient.CONNECTED:
			print("âœ… å·²è¿žæŽ¥åˆ° MaiBot")
		XxClient.DISCONNECTED:
			print("âš ï¸ ä¸Ž MaiBot æ–­å¼€è¿žæŽ¥")
		XxClient.CONNECTING:
			print("ðŸ”„ æ­£åœ¨è¿žæŽ¥...")

func _on_close_pressed() -> void:
	save_chat_history()
	window_closed.emit()
	self.hide()

func _on_send_pressed(_submitted_text: String = "") -> void:
	var message: String = input_field.text.strip_edges()
	if message.is_empty():
		return
	
	add_message(message, true)
	input_field.clear()
	
	if XxClient.is_mai_connected():
		XxClient.send_message("player_001", message)
		print("ðŸ“¤ UIå‘é€: %s" % message)  # âœ… è°ƒè¯•
	else:
		await get_tree().create_timer(1.0).timeout
		var responses = [
			"æ”¶åˆ°ï¼ä¸è¿‡æˆ‘å¥½åƒæ–­ç½‘äº†...",
			"æŠ±æ­‰ï¼Œxxæš‚æ—¶æ— æ³•è¿žæŽ¥ã€‚",
            "è®©æˆ‘æƒ³æƒ³...ï¼ˆè¿žæŽ¥ä¸­ï¼‰"
		]
		add_message(responses.pick_random(), false)

func _on_mai_response(text: String, emotion: String, player_id: String) -> void:
	print("ðŸ“¥ UIæ”¶åˆ°å›žå¤: %s" % text)  # âœ… è°ƒè¯•
	add_message(text, false)

func add_message(text: String, is_user: bool) -> void:
	var message_data = {
		"text": text,
		"is_user": is_user,
		"timestamp": Time.get_unix_time_from_system()
	}
	chat_history.append(message_data)
	
	if chat_history.size() > MAX_HISTORY:
		chat_history.pop_front()
	
	save_chat_history()
	
	var bubble_scene = preload("res://scene/chat_bubble.tscn")
	var bubble = bubble_scene.instantiate()
	bubble.setup_message(text, is_user)
	messages_container.add_child(bubble)
	
	scroll_to_bottom()

func clear_display() -> void:
	for child in messages_container.get_children():
		child.queue_free()

func scroll_to_bottom() -> void:
	await get_tree().process_frame
	var scroll: ScrollContainer = get_node("MessagesScroll")
	scroll.scroll_vertical = scroll.get_v_scroll_bar().max_value

func save_chat_history() -> void:
	var file = FileAccess.open("user://chat_history.dat", FileAccess.WRITE)
	file.store_string(JSON.stringify(chat_history))
	file.close()

func load_chat_history() -> void:
	if not FileAccess.file_exists("user://chat_history.dat"):
		return
	
	var file = FileAccess.open("user://chat_history.dat", FileAccess.READ)
	var json_text = file.get_as_text()
	file.close()
	
	var result = JSON.parse_string(json_text)
	if result is Array:
		chat_history.clear()
		for item in result:
			if item is Dictionary:
				chat_history.append(item)
		
		clear_display()
		for message in chat_history:
			var bubble_scene = preload("res://scene/chat_bubble.tscn")
			var bubble = bubble_scene.instantiate()
			bubble.setup_message(message["text"], message["is_user"])
			messages_container.add_child(bubble)
